Define a tester profile